--- a/src/components/TempUi/TempUi.scss
+++ b/src/components/TempUi/TempUi.scss
@@ -74,6 +74,7 @@
     justify-content: center;
     height: 180px;
     margin-top: 3.5rem;
+    padding-top: 1rem;
 
     .back-nav{
         display: flex;
@@ -180,13 +181,13 @@
     gap: 12px;
     background-color: #F2F2F2;
     height: 14rem;
-    padding: 18px 8vw;
+    padding: 2rem 5rem;
     margin: 0 auto;
     font-family: "Gilroy";
-    max-width: 1150px;
+    max-width: 89vw;
 
     &__header{
-        margin: 0 auto;
+        text-align: left;
     }
     &__text{
         margin: 0 auto;
